Sat Sep 19 12:05:09 1998  Richard Henderson  <rth@cygnus.com>

	* alpha.c (alpha_return_addr): SET should be VOIDmode.
	(alpha_emit_set_long_const): Rewrite to be callable from reload
	and 32-bit hosts.
	(alpha_expand_epilogue): Update for alpha_emit_set_long_const.
	* alpha.md (movdi): Likewise.

Sat Sep 19 07:33:36 1998  Richard Earnshaw (rearnsha@arm.com)

	* arm.c (add_constant): New parameter address_only, change caller.
	Set it non-zero if taking the address of an item in the pool.
	(arm_reorg): Handle cases where we need the address of an item in
	the pool.

	* arm.c (bad_signed_byte_operand): Check both arms of a sum in
	a memory address.
	* arm.md (splits for *extendqihi_insn and *extendqisi_insn): Handle
	memory addresses that are not in standard canonical form.

Sat Sep 19 01:00:32 1998  Michael Hayes  (mph@elec.canterbury.ac.nz)

	* README.C4X: New file with information about the c4x ports.
	* ginclude/va-c4x.h: New file for c4x varargs support.
	* config/c4x: New directory with c4x port files.

Fri Sep 18 22:52:05 1998  Jeffrey A Law  (law@cygnus.com)

	* reload.c (find_reloads): Do not replace a pseudo with 
	(MEM (reg_equiv_addr)) in the initializing insn for the
	pseudo.

Fri Sep 18 23:50:56 1998  David Edelsohn  <edelsohn@mhpcc.edu>

	* toplev.c (rest_of_compilation): Set bct_p on second call to
	loop_optimize.
	* loop.c (loop_optimize, scan_loop, strength_reduce): New argument
	bct_p.
	(strength_reduce): Only call analyze_loop_iterations and
	insert_bct if bct_p set.
	(check_dbra_loop): Fix typo.
	(insert_bct): Use word_mode instead of SImode.
	(instrument_loop_bct): Likewise.  Do not delete iteration count
	condition code generation insn.  Initialize iteration count before
	loop start.
	* rtl.h (loop_optimize): Update prototype.

	* ginclude/va-ppc.h (va_arg): longlong types in overflow area are
	not doubleword aligned.

	* rs6000.c (optimization_options): New function.
	(secondary_reload_class): Only call true_regnum for PSEUDO_REGs.