@@ -59,6 +59,9 @@
 #ifdef __v850__
 #include "va-v850.h"
 #else
+#if defined (_TMS320C4x) || defined (_TMS320C3x)
+#include <va-c4x.h>
+#else
 
 /* Define __gnuc_va_list.  */
 
@@ -115,6 +118,7 @@ void va_end (__gnuc_va_list);		/* Defined in libgcc.a */
 
 #endif /* _STDARG_H */
 
+#endif /* not TMS320C3x or TMS320C4x */
 #endif /* not v850 */
 #endif /* not mn10200 */
 #endif /* not mn10300 */
